--- a/indexuser.html
+++ b/indexuser.html
@@ -48,7 +48,7 @@
         <form class="d-flex" role="search">
           <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
-        <a class="btn btn-outline-success" href="index.html" role="button">Logout</a>
+        <a class="btn btn-outline-success" href="index.html" role="button">Login</a>
         </form>
        
 
